--- a/app/src/main/res/values/colors.xml
+++ b/app/src/main/res/values/colors.xml
@@ -16,6 +16,7 @@
     <color name="white_grey_1">#464a5b</color>
     <color name="navy_blue">#1a1e34</color>
     <color name="yellow_dark">#C39522</color>
+    <color name="yellow_dark_2">#E7B332</color>
     <color name="highlight_yellow">#fbc33d</color>
     <color name="highlight_yellow_70">#70fbc33d</color>
     <color name="highlight_yellow_50">#50fbc33d</color>
