--- a/app/src/main/res/values/themes.xml
+++ b/app/src/main/res/values/themes.xml
@@ -81,6 +81,8 @@
     </style>
 
     <style name="custom_action_mode_dark" parent="Widget.AppCompat.ActionMode">
+        <item name="android:background">@color/navy_blue_alt</item>
+        <item name="android:textColor">@color/white</item>
     </style>
 
     <style name="Custom.Dialog.Dark" parent="Theme.AppCompat.Dialog.Alert">
