--- a/app/src/main/res/drawable/button_curved_selected.xml
+++ b/app/src/main/res/drawable/button_curved_selected.xml
@@ -8,5 +8,5 @@
             <padding android:left="@dimen/eight_dp" android:top="0dp" android:right="@dimen/eight_dp" android:bottom="0dp" />
         </shape>
     </item>
-    <item android:drawable="@drawable/ripple" />
+    <item android:drawable="@drawable/ripple_curved_16" />
 </layer-list>
