--- a/app/src/main/res/drawable/button_curved_unselected.xml
+++ b/app/src/main/res/drawable/button_curved_unselected.xml
@@ -8,5 +8,5 @@
             <!--    <padding android:left="0dp" android:top="0dp" android:right="0dp" android:bottom="0dp" />-->
         </shape>
     </item>
-    <item android:drawable="@drawable/ripple" />
+    <item android:drawable="@drawable/ripple_curved_16" />
 </layer-list>
