--- a/app/src/main/res/layout/fragment_audios_list.xml
+++ b/app/src/main/res/layout/fragment_audios_list.xml
@@ -42,7 +42,6 @@
             android:id="@+id/fastscroll"
             android:orientation="vertical"
             android:layout_width="wrap_content"
-            android:layout_alignParentRight="true"
             android:layout_alignParentEnd="true"
             android:layout_height="match_parent"
             />
@@ -195,43 +194,136 @@
                 android:clickable="false"
                 app:srcCompat="@drawable/ic_round_keyboard_arrow_down_24"
                 />
-            <ImageView
-                android:id="@+id/album_image"
-                android:layout_width="@dimen/eighty_dp"
-                android:layout_height="@dimen/eighty_dp"
-                app:srcCompat="@drawable/ic_outline_audio_file_32"
-                android:layout_marginTop="@dimen/material_generic"
-                />
-            <TextView
-                android:id="@+id/title"
+            <LinearLayout
+                android:id="@+id/album_info_parent"
                 android:layout_width="wrap_content"
-                android:layout_height="wrap_content"
-                android:textStyle="bold"
-                android:textSize="@dimen/eighteen_sp"
-                android:textColor="@color/white"
-                android:marqueeRepeatLimit="marquee_forever"
-                android:ellipsize="middle"
-                android:singleLine="true"
-                android:layout_marginTop="@dimen/six_dp"
-                />
-            <TextView
-                android:id="@+id/album"
+                android:layout_height="@dimen/files_tab_heights"
+                android:orientation="vertical"
+                android:gravity="center_horizontal|center_vertical"
+                >
+                <ImageView
+                    android:id="@+id/album_image"
+                    android:layout_width="@dimen/eighty_dp"
+                    android:layout_height="@dimen/eighty_dp"
+                    app:srcCompat="@drawable/ic_outline_audio_file_32"
+                    android:layout_marginTop="@dimen/material_generic"
+                    />
+                <TextView
+                    android:id="@+id/title"
+                    android:layout_width="wrap_content"
+                    android:layout_height="wrap_content"
+                    android:textStyle="bold"
+                    android:textSize="@dimen/eighteen_sp"
+                    android:textColor="@color/white"
+                    android:marqueeRepeatLimit="marquee_forever"
+                    android:ellipsize="middle"
+                    android:singleLine="true"
+                    android:layout_marginTop="@dimen/six_dp"
+                    />
+                <TextView
+                    android:id="@+id/album"
+                    android:layout_width="wrap_content"
+                    android:layout_height="wrap_content"
+                    android:layout_marginTop="@dimen/six_dp"
+                    android:textSize="@dimen/twelve_sp"
+                    android:textColor="@color/grey_color"
+                    android:singleLine="true"
+                    />
+                <TextView
+                    android:id="@+id/artist"
+                    android:layout_width="wrap_content"
+                    android:layout_height="wrap_content"
+                    android:layout_marginTop="@dimen/six_dp"
+                    android:textSize="@dimen/twelve_sp"
+                    android:textColor="@color/white"
+                    android:singleLine="true"
+                    />
+            </LinearLayout>
+            <LinearLayout
+                android:id="@+id/load_lyrics_parent"
                 android:layout_width="wrap_content"
-                android:layout_height="wrap_content"
-                android:layout_marginTop="@dimen/six_dp"
-                android:textSize="@dimen/twelve_sp"
-                android:textColor="@color/grey_color"
-                android:singleLine="true"
-                />
-            <TextView
-                android:id="@+id/artist"
-                android:layout_width="wrap_content"
-                android:layout_height="wrap_content"
-                android:layout_marginTop="@dimen/six_dp"
-                android:textSize="@dimen/twelve_sp"
-                android:textColor="@color/white"
-                android:singleLine="true"
-                />
+                android:layout_height="@dimen/files_tab_heights"
+                android:orientation="horizontal"
+                android:gravity="center_horizontal|center_vertical"
+                android:visibility="gone"
+                android:clickable="false"
+                >
+                <Button
+                    android:id="@+id/search_lyrics_button"
+                    android:layout_width="wrap_content"
+                    android:layout_height="wrap_content"
+                    android:background="@drawable/button_curved_unselected"
+                    android:text="@string/search"
+                    android:layout_margin="@dimen/material_generic"
+                    />
+                <Button
+                    android:id="@+id/load_lyrics_button"
+                    android:layout_width="wrap_content"
+                    android:layout_height="wrap_content"
+                    android:background="@drawable/button_curved_unselected"
+                    android:text="@string/load"
+                    />
+            </LinearLayout>
+            <RelativeLayout
+                android:id="@+id/show_lyrics_parent"
+                android:layout_width="match_parent"
+                android:layout_height="@dimen/files_tab_heights"
+                android:visibility="gone"
+                >
+                <ScrollView
+                    android:layout_width="match_parent"
+                    android:layout_height="match_parent"
+                    android:layout_alignParentTop="true"
+                    android:layout_alignParentStart="true"
+                    android:clickable="false"
+                    android:gravity="center_horizontal|center_vertical"
+                    >
+                    <LinearLayout
+                        android:layout_width="match_parent"
+                        android:layout_height="match_parent"
+                        android:orientation="vertical"
+                        android:gravity="center_horizontal|center_vertical"
+                        >
+                        <TextView
+                            android:id="@+id/show_lyrics_text_last"
+                            android:layout_width="match_parent"
+                            android:layout_height="match_parent"
+                            android:textColor="@color/white_text_translucent"
+                            android:textSize="@dimen/eighteen_sp"
+                            android:clickable="false"
+                            android:gravity="center_horizontal|center_vertical"
+                            android:visibility="gone"
+                            />
+                        <TextView
+                            android:id="@+id/show_lyrics_text_current"
+                            android:layout_width="match_parent"
+                            android:layout_height="match_parent"
+                            android:textColor="@color/white"
+                            android:textSize="@dimen/fourteen_sp"
+                            android:clickable="false"
+                            android:gravity="center_horizontal|center_vertical"
+                            />
+                        <TextView
+                            android:id="@+id/show_lyrics_text_next"
+                            android:layout_width="match_parent"
+                            android:layout_height="match_parent"
+                            android:textColor="@color/white_text_translucent"
+                            android:textSize="@dimen/eighteen_sp"
+                            android:clickable="false"
+                            android:gravity="center_horizontal|center_vertical"
+                            android:visibility="gone"
+                            />
+                    </LinearLayout>
+                </ScrollView>
+                <ImageView
+                    android:id="@+id/clear_lyrics_button"
+                    android:src="@drawable/ic_close"
+                    android:layout_width="@dimen/material_generic_medium"
+                    android:layout_height="@dimen/material_generic_medium"
+                    android:layout_alignParentEnd="true"
+                    android:layout_alignParentTop="true"
+                    />
+            </RelativeLayout>
             <LinearLayout
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
@@ -259,6 +351,13 @@
                     android:layout_width="@dimen/twenty_four_dp"
                     android:layout_height="@dimen/twenty_four_dp"
                     app:srcCompat="@drawable/ic_round_shuffle_24"
+                    android:layout_weight="0.10"
+                    />
+                <ImageView
+                    android:id="@+id/showLyricsButton"
+                    android:layout_width="@dimen/twenty_four_dp"
+                    android:layout_height="@dimen/twenty_four_dp"
+                    app:srcCompat="@drawable/ic_baseline_closed_caption_off_24"
                     android:layout_weight="0.10"
                     />
             </LinearLayout>
