--- a/app/src/main/res/values/colors.xml
+++ b/app/src/main/res/values/colors.xml
@@ -11,6 +11,7 @@
     <color name="black_50">#50000000</color>
     <color name="black_20">#20000000</color>
     <color name="white">#FFFFFFFF</color>
+    <color name="white_text_translucent">#40FFFFFF</color>
 <!--    <color name="white_translucent">#10FFFFFF</color>-->
     <color name="white_translucent_2">#30FFFFFF</color>
     <color name="white_grey_1">#464a5b</color>
