Add whatsapp and telgram analysis; migrate paths analyis to use mediastore as data source

--- a/app/src/main/res/layout/fragment_analyse.xml
+++ b/app/src/main/res/layout/fragment_analyse.xml
@@ -144,13 +144,6 @@
                 android:layout_marginTop="@dimen/material_generic"
                 android:visibility="gone"
                 />
-            <!--<com.amaze.fileutilities.home_page.ui.analyse.AnalysisTypeView
-                android:id="@+id/telegram_preview"
-                android:layout_width="match_parent"
-                android:layout_height="wrap_content"
-                app:analysisTitle="@string/telegram_files"
-                android:layout_marginTop="@dimen/material_generic"
-                />-->
             <!-- junk files files of uninstalled apps that aren't deleted -->
             <!--<com.amaze.fileutilities.home_page.ui.analyse.AnalysisTypeView
                 android:id="@+id/junk_files_preview"
@@ -185,6 +178,35 @@
                 app:showPreview="true"
                 android:layout_marginTop="@dimen/material_generic"
                 android:visibility="gone"
+                />
+            <com.amaze.fileutilities.home_page.ui.analyse.AnalysisTypeView
+                android:id="@+id/large_files_preview"
+                android:layout_width="match_parent"
+                android:layout_height="wrap_content"
+                app:analysisTitle="@string/large_files"
+                app:showPreview="true"
+                android:layout_marginTop="@dimen/material_generic"
+                android:visibility="gone"
+                />
+
+            <com.amaze.fileutilities.home_page.ui.analyse.AnalysisTypeView
+                android:id="@+id/whatsapp_preview"
+                android:layout_width="match_parent"
+                android:layout_height="wrap_content"
+                app:analysisTitle="@string/whatsapp_media"
+                android:layout_marginTop="@dimen/material_generic"
+                android:visibility="gone"
+                app:showPreview="true"
+                />
+
+            <com.amaze.fileutilities.home_page.ui.analyse.AnalysisTypeView
+                android:id="@+id/telegram_preview"
+                android:layout_width="match_parent"
+                android:layout_height="wrap_content"
+                app:analysisTitle="@string/telegram_files"
+                android:layout_marginTop="@dimen/material_generic"
+                android:visibility="gone"
+                app:showPreview="true"
                 />
 
             <com.amaze.fileutilities.home_page.ui.analyse.AnalysisTypeView
