--- a/app/src/main/res/layout/fragment_analyse.xml
+++ b/app/src/main/res/layout/fragment_analyse.xml
@@ -46,7 +46,7 @@
                 app:showPreview="true"
                 android:layout_marginTop="@dimen/material_generic"
                 />
-            <com.amaze.fileutilities.home_page.ui.analyse.AnalysisTypeView
+            <!--<com.amaze.fileutilities.home_page.ui.analyse.AnalysisTypeView
                 android:id="@+id/sad_preview"
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
@@ -54,7 +54,7 @@
                 app:showPreview="true"
                 app:hint="@string/frown_hint"
                 android:layout_marginTop="@dimen/material_generic"
-                />
+                />-->
             <com.amaze.fileutilities.home_page.ui.analyse.AnalysisTypeView
                 android:id="@+id/selfie_preview"
                 android:layout_width="match_parent"
@@ -80,7 +80,7 @@
                 app:hint="@string/closed_eyes_hint"
                 android:layout_marginTop="@dimen/material_generic"
                 />
-            <com.amaze.fileutilities.home_page.ui.analyse.AnalysisTypeView
+            <!--<com.amaze.fileutilities.home_page.ui.analyse.AnalysisTypeView
                 android:id="@+id/distracted_preview"
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
@@ -88,7 +88,17 @@
                 app:showPreview="true"
                 app:hint="@string/distracted_hint"
                 android:layout_marginTop="@dimen/material_generic"
+                />-->
+
+            <com.amaze.fileutilities.home_page.ui.analyse.AnalysisTypeView
+                android:id="@+id/large_files_preview"
+                android:layout_width="match_parent"
+                android:layout_height="wrap_content"
+                app:analysisTitle="@string/large_files"
+                app:showPreview="true"
+                android:layout_marginTop="@dimen/material_generic"
                 />
+
             <com.amaze.fileutilities.home_page.ui.analyse.AnalysisTypeView
                 android:id="@+id/duplicate_files_preview"
                 android:layout_width="match_parent"
@@ -179,15 +189,6 @@
                 android:layout_marginTop="@dimen/material_generic"
                 android:visibility="gone"
                 />
-            <com.amaze.fileutilities.home_page.ui.analyse.AnalysisTypeView
-                android:id="@+id/large_files_preview"
-                android:layout_width="match_parent"
-                android:layout_height="wrap_content"
-                app:analysisTitle="@string/large_files"
-                app:showPreview="true"
-                android:layout_marginTop="@dimen/material_generic"
-                android:visibility="gone"
-                />
 
             <com.amaze.fileutilities.home_page.ui.analyse.AnalysisTypeView
                 android:id="@+id/whatsapp_preview"
@@ -214,6 +215,17 @@
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
                 app:analysisTitle="@string/unused_apps"
+                app:showPreview="true"
+                android:layout_marginTop="@dimen/material_generic"
+                android:visibility="gone"
+                />
+
+
+            <com.amaze.fileutilities.home_page.ui.analyse.AnalysisTypeView
+                android:id="@+id/most_used_apps_preview"
+                android:layout_width="match_parent"
+                android:layout_height="wrap_content"
+                app:analysisTitle="@string/most_used_apps"
                 app:showPreview="true"
                 android:layout_marginTop="@dimen/material_generic"
                 android:visibility="gone"
