--- a/app/src/main/res/layout/list_header.xml
+++ b/app/src/main/res/layout/list_header.xml
@@ -22,14 +22,27 @@
         android:textSize="@dimen/fourteen_sp"
         android:textStyle="bold"
         android:textColor="@color/navy_blue"
-        android:maxEms="20"
-        android:maxLines="1"
+        android:maxEms="15"
         android:background="@drawable/background_curved_list_titles"
         android:paddingStart="@dimen/material_generic"
         android:paddingEnd="@dimen/material_generic"
         android:layout_alignParentStart="true"
+        android:ellipsize="marquee"
+        android:singleLine="true"
+        android:marqueeRepeatLimit="marquee_forever"
         >
     </TextView>
+    <TextView
+        android:id="@+id/header_summary"
+        android:gravity="center_vertical"
+        android:layout_width="wrap_content"
+        android:layout_height="match_parent"
+        android:textColor="@color/highlight_yellow"
+        android:layout_marginStart="@dimen/eight_dp"
+        android:layout_marginEnd="@dimen/eight_dp"
+        android:layout_toStartOf="@id/overflow_button"
+        android:visibility="gone"
+        />
     <!--<ImageView
         android:id="@+id/trash_button"
         app:srcCompat="@drawable/ic_round_delete_outline_yellow_32"
