--- a/app/src/main/res/layout/activity_main_actionbar_item_selected.xml
+++ b/app/src/main/res/layout/activity_main_actionbar_item_selected.xml
@@ -25,7 +25,10 @@
         android:layout_height="match_parent"
         android:gravity="center_vertical"
         android:textColor="@color/white"
-        android:maxLines="1"
+        android:ellipsize="marquee"
+        android:singleLine="true"
+        android:marqueeRepeatLimit="marquee_forever"
+        android:ems="25"
         android:layout_toRightOf="@+id/backActionBar"
         android:layout_toEndOf="@+id/backActionBar"
         android:layout_toLeftOf="@+id/thumbsDown"
