--- a/app/src/main/res/layout/activity_main_actionbar_item_selected.xml
+++ b/app/src/main/res/layout/activity_main_actionbar_item_selected.xml
@@ -45,4 +45,19 @@
         android:layout_marginStart="@dimen/eight_dp"
         android:visibility="gone"
         />
+    <TextView
+        android:id="@+id/playNextButton"
+        android:layout_width="wrap_content"
+        android:layout_height="match_parent"
+        android:layout_alignParentRight="true"
+        android:layout_alignParentEnd="true"
+        android:layout_marginLeft="@dimen/eight_dp"
+        android:layout_marginStart="@dimen/eight_dp"
+        android:visibility="gone"
+        android:text="@string/play_next"
+        android:textColor="@color/white"
+        android:textSize="@dimen/eighteen_sp"
+        android:textStyle="bold"
+        android:gravity="center_vertical"
+        />
 </RelativeLayout>
